# kindle-clippings

./: Cargo.toml  README.md  index.html
.github/workflows/: build_and_test.yaml
frontend/: index.html  script.js  styles.css
frontend/pkg/: README.md  kindle_clippings_bg.wasm
pkg/: kindle_clippings.d.ts  kindle_clippings.js  kindle_clippings_bg.js  kindle_clippings_bg.wasm.d.ts  package.json
src/: cli_args.rs  export.rs  lib.rs  main.rs  parser.rs  parsing.rs  your_file.txt
testing/: serve_wasm.py
