[package]
name = "kindle-clippings"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.4"
wasm-bindgen = "0.2.92"
wasm-bindgen-test = "0.3.42"

[profile.release]
# https://rustwasm.github.io/book/reference/code-size.html
lto = true
opt-level = 's'
