[package]
name = "kindle-clippings"
version = "0.1.0"
edition = "2021"
description = "This is an over-engineered exporter for Kindle clipping files born out of my own need and an opportunity to productively procrastinate using Rust and WASM."
repository = "https://github.com/chumbert/kindle-clippings"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lazy_static = "1.5.0"
regex = "1.10.4"
wasm-bindgen = "0.2.92"
wasm-bindgen-test = "0.3.42"
web-sys = "0.3.69"
console_error_panic_hook = { version = "0.1.7", optional = true }
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0.204", features = ["derive"] }
clap = { version = "4.5.9", features = ["derive"] }

[profile.release]
# https://rustwasm.github.io/book/reference/code-size.html
lto = true
opt-level = 's'
